<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center" >

        <Button
            android:id="@+id/Main_btn_intro"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/Main_btn_intro"
            android:layout_marginBottom="30dp" />

        <Button
            android:id="@+id/Main_btn_todayword"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/Main_btn_todayword"
            android:layout_marginBottom="30dp" />

        <Button
            android:id="@+id/Main_btn_note"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/Main_btn_note"
            android:layout_marginBottom="30dp" />

        <Button
            android:id="@+id/Main_btn_addword"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/Main_btn_addword"
            android:layout_marginBottom="30dp" />
    </LinearLayout>

</LinearLayout>
