<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/InventionNote_title_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/InventionNote_title"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="50dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:focusable="true" >

            <TextView
                android:id="@+id/InventionNote_one_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/InventionNote_one_txt"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/InventionNote_one_word_edt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:focusableInTouchMode="false"
                android:inputType="text" >
            </EditText>

            <EditText
                android:id="@+id/InventionNote_one_word_edt2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:focusableInTouchMode="false"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/InventionNote_two_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/InventionNote_two_txt"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/InventionNote_two_word1_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/InventionNote_two_word1_edt"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:focusableInTouchMode="false"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/InventionNote_two_word2_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/InventionNote_two_word2_edt"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:focusableInTouchMode="false"
                    android:inputType="text" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/InventionNote_three_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/InventionNote_three_txt"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/InventionNote_three_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:focusableInTouchMode="false"
                android:inputType="text" />
            
        </LinearLayout>

        <Button
            android:id="@+id/InventionNote_btnReset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/InventionNote_btnReset" />
</LinearLayout>